# chess

app/: build.gradle.kts
app/src/main/kotlin/dev/mcd/chess/feature/auth/: AuthModule.kt
app/src/main/kotlin/dev/mcd/chess/feature/auth/data/: AuthDefaults.kt  AuthRepositoryImpl.kt  PasswordHasher.kt  UserDao.kt  UserEntity.kt
app/src/main/kotlin/dev/mcd/chess/feature/auth/domain/: AuthModels.kt  AuthRepository.kt  SessionManager.kt
app/src/main/kotlin/dev/mcd/chess/feature/common/: CommonModule.kt
app/src/main/kotlin/dev/mcd/chess/feature/common/data/: TranslationsImpl.kt
app/src/main/kotlin/dev/mcd/chess/feature/common/domain/: AppColorScheme.kt  Translations.kt
app/src/main/kotlin/dev/mcd/chess/feature/game/: GameModule.kt
app/src/main/kotlin/dev/mcd/chess/feature/history/: HistoryModule.kt
app/src/main/kotlin/dev/mcd/chess/feature/history/data/: GameDao.kt  GameEntity.kt  GameHistoryRepositoryImpl.kt  SaveGameImpl.kt
app/src/main/kotlin/dev/mcd/chess/feature/storage/: DatabaseModule.kt
app/src/main/kotlin/dev/mcd/chess/ui/: Routing.kt
app/src/main/kotlin/dev/mcd/chess/ui/game/: GameView.kt
app/src/main/kotlin/dev/mcd/chess/ui/settings/: ColorSchemeChip.kt  DebugSettings.kt
app/src/main/kotlin/dev/mcd/chess/ui/theme/: ComposeAppColorScheme.kt
app/src/main/res/values/: strings.xml
buildSrc/src/main/java/: Versions.kt
engine-stockfish/src/main/native/: CMakeLists.txt
engine-stockfish/src/main/native/bridge/: stockfish.cpp
online/src/main/kotlin/dev/mcd/chess/online/: OnlineModule.kt
(+20 files in other folders)
